tests/spec/emit/snapshots/interop_closure_with_tuple_error_result_flattens_for_go_callback_param.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:bufio"
  import "go:fmt"
  import "go:strings"
  
  fn main() {
    let mut forwarded = bufio.NewScanner(strings.NewReader("one two three"))
    forwarded.Split(|data, at_eof| bufio.ScanWords(data, at_eof))
    let mut count = 0
    while forwarded.Scan() {
      count += 1
    }
    fmt.Println(count)
  
    let mut rebuilt = bufio.NewScanner(strings.NewReader("four five"))
    rebuilt.Split(|data, at_eof| {
      let (advance, token) = bufio.ScanWords(data, at_eof)?
      Ok((advance, token))
    })
    let mut words = 0
    while rebuilt.Scan() {
      words += 1
    }
    fmt.Println(words)
  }
---
package main

import (
	"bufio"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strings"
)

func main() {
	forwarded := bufio.NewScanner(strings.NewReader("one two three"))
	forwarded.Split(func(data []byte, at_eof bool) (int, []byte, error) {
		return bufio.ScanWords(data, at_eof)
	})
	count := 0
	for forwarded.Scan() {
		count++
	}
	fmt.Println(count)
	rebuilt := bufio.NewScanner(strings.NewReader("four five"))
	rebuilt.Split(func(data []byte, at_eof bool) (int, []byte, error) {
		ret, ret_1, ret_2 := bufio.ScanWords(data, at_eof)
		tup := lisette.MakeTuple2(ret, ret_1)
		var result lisette.Result[lisette.Tuple2[int, []byte], error]
		if ret_2 != nil {
			result = lisette.MakeResultErr[lisette.Tuple2[int, []byte], error](ret_2)
		} else {
			result = lisette.MakeResultOk[lisette.Tuple2[int, []byte], error](tup)
		}
		check := result
		if check.Tag != lisette.ResultOk {
			return 0, nil, check.ErrVal
		}
		advance := check.OkVal.First
		token := check.OkVal.Second
		return advance, token, nil
	})
	words := 0
	for rebuilt.Scan() {
		words++
	}
	fmt.Println(words)
}
