tests/spec/emit/snapshots/interop_collapsed_array_constraint_reconstructs_when_uninferrable.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/arr"
  
  fn main() {
    let out = arr.Make4<int>()
    let _ = out
  }
---
package main

import "example.com/arr"

func main() {
	out := arr.Make4[[4]int, int]()
	_ = out
}
