tests/spec/emit/snapshots/interop_comma_ok_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn apply(f: fn(string) -> Option<string>, key: string) -> string {
    match f(key) {
      Some(v) => v,
      None => "unset",
    }
  }
  
  fn main() {
    let r = apply(os.LookupEnv, "HOME")
    let _ = r
  }
---
package main

import "os"

func apply(f func(string) (string, bool), key string) string {
	if v, ok := f(key); ok {
		return v
	} else {
		return "unset"
	}
}

func main() {
	r := apply(os.LookupEnv, "HOME")
	_ = r
}
