tests/spec/emit/snapshots/interop_comma_ok_direct_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn main() {
    let r = os.LookupEnv("HOME")
    match r {
      Some(v) => { let _ = v },
      None => { let _ = "" },
    }
  }
---
package main

import "os"

func main() {
	r, ok := os.LookupEnv("HOME")
	if ok {
		_ = r
	}
}
