tests/spec/emit/snapshots/interop_comma_ok_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:os"
  
  fn main() {
    let f = os.LookupEnv
    let r = f("HOME")
    match r {
      Some(v) => { let _ = v },
      None => { let _ = "" },
    }
  }
---
package main

import "os"

func main() {
	f := os.LookupEnv
	r, ok := f("HOME")
	if ok {
		_ = r
	}
}
